--- a/src/Jili/BackendBundle/Resources/views/Vote/editConfirm.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Vote/editConfirm.html.twig
@@ -85,7 +85,9 @@ $(document).ready(function(){
             <td>&nbsp;</td>
         </tr>
     </table>
+    <div class="tips">
     {% if code is defined %} <font color='red'>{{ code }}</font>
     {%endif%}
+    </div>
 </form>
 {% endblock %}
