--- a/src/Jili/ApiBundle/Resources/views/Admin/emergencyAnnouncement.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/emergencyAnnouncement.html.twig
@@ -28,9 +28,10 @@ function sendContent(){
 <BODY>
 <form  method="post" action="{{ path('_admin_emergencyAnnouncement')}}">
 <table style="padding:100px;" >
+  <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
     <tr><td>紧急公告内容&nbsp;&nbsp;</td><td><textarea id="content" name="content" cols="50" rows="10">{{ content }}</textarea></td></tr>
 	<tr><td>&nbsp;</td><td>&nbsp;</td></tr>
-	<tr><td><input type="button" value='清除' onclick="aa()";></td><td><input type="button" value='提交' onclick="sendContent()" ></td></tr>
+	<tr><td></td><td><input type="button" value='清除' onclick="aa()";><input type="button" value='提交' onclick="sendContent()" ></td></tr>
  </table>
  </form>
  
