--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -70,7 +70,7 @@ input[type="text"], input.Wdate{
   line-height: 24px;
 }
 input[type="submit"], input[type="button"]{
-  margin: 10px 0 20px;
+  margin: 10px 10px 20px 0;
   width: 65px;
   height: 24px;
   line-height: 24px;
