--- a/src/Jili/BackendBundle/Resources/views/Taobao/saveComponent.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Taobao/saveComponent.html.twig
@@ -1,4 +1,5 @@
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+<LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
+<script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
 
 <script type="text/javascript">
 $(document).ready(function(){
@@ -44,7 +45,7 @@ $(document).ready(function(){
 });
 </script>
 <form method="post" name="componentForm" id="componentForm" action="{{ path('_admin_taobao_saveComponentFinish') }}">
-<table align="center" width="1024">
+<table align="center" width="1024" class="list">
     <tr>
         <td>组件类别:</td>
         <td><select name="componentId" id="componentId">
