fix css of exchange page

--- a/web/css/exchange.css
+++ b/web/css/exchange.css
@@ -204,7 +204,7 @@
 	margin-right: -40px;
 }
 .exchangeV2 li{
-	float: left;
+	float:right;
 	margin-top: 40px;
 	margin-right: 40px;
 	background-color: #fff;
