--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -93,14 +93,21 @@ $(document).ready(function(){
             <div class="cont">
              <table cellpadding="10" cellspacing="10">
                <tbody>
-                 <tr><td colspan="2" class="font13" style="padding:0;">积粒网即将与91问问调查网合并，新网站地址为91问问地址<a class="font14 bg" href="http://www.91wenwen.net" target="_blank">www.91wenwen.net</a>，关于账号和积分规则的变化，请大家注意：</td></tr>
-                 <tr><td colspan="2" style="height:5px;"></td></tr>
-                 <tr><td style="width:28%; margin-right:5px;" class="bg">只有<a href="http://www.91jili.com/" target="_blank">积粒网</a>的账号</td><td class="bg">账号保持不变</td></tr>
+                 <tr><td colspan="2" class="font13" style=" padding-bottom: 1.8%; line-height: 22px;">积粒网即将与91问问调查网合并，新网站地址为91问问地址<a class="font14 bg" href="http://www.91wenwen.net" target="_blank">www.91wenwen.net</a>，关于账号和积分规则的变化，请大家注意：</td></tr>
+                 
+                 <tr><td>只有<a href="http://www.91jili.com/" target="_blank">积粒网</a>的账号</td><td>账号保持不变</td></tr>
                  <tr><td>只有<a href="http://www.91wenwen.net/" target="_blank">91问问</a>的账号</td><td>账号保持不变</td></tr>
-                 <tr><td class="bg">既有积粒网又有91问问的账号</td><td class="bg" style="padding: 1% 2%;">两边都有账号并且<strong class="font14">没有绑定</strong>的，原账号仍然可用。两边都有账号但是<strong class="font14">绑定过</strong>的，只能用91问问的账号，积分合并到该账号。如果您想查看自己的绑定状态请登录91问问<a class="bind" href="https://www.91wenwen.net/connect_jili/description" target="_blank">点击这里</a></td></tr>
-                 <tr><td colspan="2" style="padding:0; height:20px!important;"></td></tr>
+                 <tr>
+                     <td rowspan="2" style="width:43%;">既有<a title="积粒网" href="http://www.91jili.com/" target="_blank">积粒网</a>又有<a title="91问问" href="http://www.91wenwen.net/" target="_blank">91问问</a>的账号</td>
+                     <td style=" line-height: 19px; padding-top: 2.1%;">两边的账号已经绑定的，只能使用91问问账号，积粒网账号停用，积分自动合并到91问问账号。</td>
+                 </tr>
+                 <tr>
+                     <td style=" line-height: 19px; padding-top: 2.8%;">两边的账号没有绑定的，积分不会合并，两边的账号都可用。如果您想绑定账号合并积分，请到91问问<a title="点击这里查看是否绑定账号" class="bind" href="https://www.91wenwen.net/connect_jili/description" target="_blank">绑定</a></td>
+                 </tr>
+
+                 <tr><td colspan="2" style="padding:0; height:12px!important;"></td></tr>
                  <tr><td colspan="2" class="thanks font13">感谢您一直以来对我们的支持，给您造成的不便，敬请谅解！我们正在努力前进的路上，希望有你的一路陪伴，我们才能走的更远~！</td></tr>
-                 <tr><td colspan="2" class="sign">91问问开发团队<br>2015年11月24日</td></tr>
+                 <tr><td colspan="2" class="sign">积粒网开发团队<br>2015年11月24日</td></tr>
                </tbody>
              </table>
              <a class="contact" title="联系客服" href="{{ path('_default_support') }}" target="_blank"></a>
