--- a/src/Wenwen/FrontendBundle/Resources/views/About/regulations.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/About/regulations.html.twig
@@ -18,80 +18,80 @@
 			<li>
 				<p><strong class="font20">第一章</strong></p>
 				<p><strong>第一条 总则</strong><br/>
-				本会员协议是，Research Panel Asia, Inc.在运营91问问调查网的问卷调查服务(以下简称本服务)时，为管理会员的资格而制定的关于权利和义务的规定。本会员协议完全适用于在使用服务时的一切情况。</p>
+				本会员协议是，dataSpring, Inc.在运营91问问调查网的问卷调查服务(以下简称本服务)时，为管理会员的资格而制定的关于权利和义务的规定。本会员协议完全适用于在使用服务时的一切情况。</p>
 				<p><strong>第二条 定义</strong><br/>
 				除了另外制定的定义之外，本会员协议中对于各项概念的定义如下<br/>
-				1. <RPA>为Research Panel Asia, Inc.的简称。RPA是一家总部设在日本东京，利用互联网，在亚洲搜集消费者市场调查研究数据的公司。<br/>
-				2. <会员>为，在根据RPA所指定的流程，在同意本会员协议后，注册本服务，并由所RPA承认的用户。<br/>
-				3. <会员协议>为个人使用RPA提供的服务而制定的协议。<br/>
-				4. <其他的用户协议>为用户在使用RPA所提供的服务时，除本会员协议之外所制定的以下协议
-				由RPA任意做出的对于使用条件的各种告知
-				第五条所作出的通知
-				5. <个人信息>为关于会员的信息，该信息包含姓名，生日等可以识别特定的个人的信息（包括与其他的信息参照后，可以识别特定个人的信息）。</p>
+				1. &lt;dataSpring&gt;为dataSpring, Inc.的简称。dataSpring是一家总部设在日本东京，利用互联网，在亚洲搜集消费者市场调查研究数据的公司。<br/>
+				2. &lt;会员&gt;为，在根据dataSpring所指定的流程，在同意本会员协议后，注册本服务，并由所dataSpring承认的用户。<br/>
+				3. &lt;会员协议&gt;为个人使用dataSpring提供的服务而制定的协议。<br/>
+				4. &lt;其他的用户协议&gt;为用户在使用dataSpring所提供的服务时，除本会员协议之外所制定的以下协议<br/>
+				由dataSpring任意做出的对于使用条件的各种告知<br/>
+				第五条所作出的通知<br/>
+				5. &lt;个人信息&gt;为关于会员的信息，该信息包含姓名，生日等可以识别特定的个人的信息（包括与其他的信息参照后，可以识别特定个人的信息）。</p>
 				<p><strong>第三条　协议的适用范围</strong><br/>
 				1. 以任何名称的其他的用户协议，都将由本会员协议构成。<br/>
 				2. 在本会员协议与其他的用户协议发生矛盾时，将依照该用户协议所制定的章程为准。</p>
 				<p><strong>第四条 协议的更改</strong><br/>
-				1. RPA在不经过用户的承认下，可以更改本会员协议。这种情况下，在使用本服务时，将以更改后的会员协议为准。<br/>
-				2. 更改后的会员协议，除了RPA另外指定的情况下，在网站上登载时即生效。</p>
-				<p><strong>第五条 (RPA的通知)</strong><br/>
-				1. RPA将通过在网站上登载以及其他RPA认为妥当的方法，对会员做出重要信息的通知。<br/>
+				1. dataSpring在不经过用户的承认下，可以更改本会员协议。这种情况下，在使用本服务时，将以更改后的会员协议为准。<br/>
+				2. 更改后的会员协议，除了dataSpring另外指定的情况下，在网站上登载时即生效。</p>
+				<p><strong>第五条 (dataSpring的通知)</strong><br/>
+				1. dataSpring将通过在网站上登载以及其他dataSpring认为妥当的方法，对会员做出重要信息的通知。<br/>
 				2. 前项的通知在网站上登载时生效。</p>
 
 				<p><strong class="font20">第二章　会员</strong></p>
 				<p><strong>第六条 会员的注册</strong><br/>
-				1. 在希望使用本服务时，应根据RPA所制定的方法进行会员注册。<br/>
-				2. 注册会员的人（包括该会员协议的对象，以下将称为<注册者>）在注册时，将被看作同意本会员协议。</p>
+				1. 在希望使用本服务时，应根据dataSpring所制定的方法进行会员注册。<br/>
+				2. 注册会员的人（包括该会员协议的对象，以下将称为&lt;注册者&gt;）在注册时，将被看作同意本会员协议。</p>
 				<p><strong>第七条 注册的承认</strong><br/>
-				1. RPA将通过必要的程序，承认会员的注册。在承认会员注册的同时，本协议将生效。</p>
+				1. dataSpring将通过必要的程序，承认会员的注册。在承认会员注册的同时，本协议将生效。</p>
 				<p><strong>第八条 不被承认的注册</strong><br/>
-				1. 经过RPA判断认为注册者不具备成为会员条件的情况下，将不承认该会员的注册。</p>
+				1. 经过dataSpring判断认为注册者不具备成为会员条件的情况下，将不承认该会员的注册。</p>
 				<p><strong>第九条 本服务的使用以及会员的资格</strong><br/>
 				1. 本服务为仅限于非盈利的个人使用。<br/>
 				2. 本服务仅限于在中国国内居住的16岁以上的会员可以使用（未成年人应取得父母或者应其他监护人的同意）。<br/>
 				3. 违反本会员协议的情况下，将禁止以任何方式使用本网站。<br/>
-				4. 在RPA的单独判断下，任何时候都有权利拒绝提供会员资格以及其他的服务。且没有必要向会员透露理由。</p>
+				4. 在dataSpring的单独判断下，任何时候都有权利拒绝提供会员资格以及其他的服务。且没有必要向会员透露理由。</p>
 
 				<p><strong class="font20">第三章　会员的义务</strong></p>
 				<p><strong>第十条 会员的账户以及密码。</strong><br/>
-				1. RPA将提供会员账户和密码，或者提供设定用户名以及密码的权利。<br/>
-				2. 会员有义务安全地使用会员用户名以及密码，并对管理负有所有的责任。不论该会员是否有故意的过失，RPA将不对用户名，密码被第三者（包括但不仅限于会员的家庭成员）使用时所造成的各种损失负责。</p>
+				1. dataSpring将提供会员账户和密码，或者提供设定用户名以及密码的权利。<br/>
+				2. 会员有义务安全地使用会员用户名以及密码，并对管理负有所有的责任。不论该会员是否有故意的过失，dataSpring将不对用户名，密码被第三者（包括但不仅限于会员的家庭成员）使用时所造成的各种损失负责。</p>
 				<p><strong>第十一条 会员的义务</strong><br/>
-				1. 会员应该在注册信息发生改变的时候，及时通知RPA以做出更改。<br/>
-				2. 会员应该积极参加RPA所组织的市场调查活动，同时在回答问卷时不应提供虚伪的数据或者随意进行解答。例如，解答问卷时作出与以前的调查相矛盾的回答，或者作出统计数据上不可能的回答。<br/>
+				1. 会员应该在注册信息发生改变的时候，及时通知dataSpring以做出更改。<br/>
+				2. 会员应该积极参加dataSpring所组织的市场调查活动，同时在回答问卷时不应提供虚伪的数据或者随意进行解答。例如，解答问卷时作出与以前的调查相矛盾的回答，或者作出统计数据上不可能的回答。<br/>
 				3. 会员在使用本服务时，应该遵守法律，以及本会员协议。<br/>
 				4. 会员应该对参加调查活动，解答问卷时所获得的信息以及服务的内容保密，不透露给第三者。</p>
 
 				<p><strong class="font20">第四章 服务</strong></p>
 				<p><strong>第十二条 本服务内容的更改和停止</strong><br/>
-				会员应该同意RPA可以在不事先通知会员的情况下，更改服务的使用条件和规则，或者改变服务的内容，构成以及名称。本服务的更改，包含服务一部分内容的更改和废除，但不仅限于此。</p>
+				会员应该同意dataSpring可以在不事先通知会员的情况下，更改服务的使用条件和规则，或者改变服务的内容，构成以及名称。本服务的更改，包含服务一部分内容的更改和废除，但不仅限于此。</p>
 
 				<p><strong class="font20">第五章 积分</strong></p>
 
 				<p><strong>第十三条 积分和奖励</strong><br/>
-				1. 问问积分为会员参加调查，或者作出某种行动时的报酬。但是，积分的赠与时间，赠与方法，以及额度由RPA进行判断并制定。<br/>
+				1. 问问积分为会员参加调查，或者作出某种行动时的报酬。但是，积分的赠与时间，赠与方法，以及额度由dataSpring进行判断并制定。<br/>
 				2. 在积累一定数量的积分后，会员可以自由地申请将积分兑换成各种各样的奖励。<br/>
-				3. 由会员注册信息的泄漏，会员自己的失误所造成的，积分无法累积或者无法兑换成现金的情况,RPA不负责任。<br/>
+				3. 由会员注册信息的泄漏，会员自己的失误所造成的，积分无法累积或者无法兑换成现金的情况,dataSpring不负责任。<br/>
 				4. 会员获得积分时所产生的税金，兑换现金时的手续费，以及使用积分购买的服务或者商品时发生的税金以及其他费用，将由会员负担。</p>
 
 				<p><strong>第十四条 积分的取消</strong><br/>
-				1. 用户提供虚伪信息、错误信息，或者提供非最新信息，经RPA调查的购买者，或者合作伙伴的判断下，可以取消或者没收赠与会员的，以及会员已经拥有的积分。<br/>
-				2. 会员在6个月不参加问卷调查，不登陆网站，或者RPA无法发送邮件至会员邮箱次数达3次以上时，会员所拥有的积分将会失效。<br/>
+				1. 用户提供虚伪信息、错误信息，或者提供非最新信息，经dataSpring调查的购买者，或者合作伙伴的判断下，可以取消或者没收赠与会员的，以及会员已经拥有的积分。<br/>
+				2. 会员在6个月不参加问卷调查，不登陆网站，或者dataSpring无法发送邮件至会员邮箱次数达3次以上时，会员所拥有的积分将会失效。<br/>
 				3. 会员所获得的积分，在第二十一条所规定的会员资格失效以及会员帐户注销之后也将同时失效。</p>
 
 				<p><strong class="font20">第六章 使用上的限制，服务的中断以及终止</strong></p>
 
 				<p><strong>第十五条 使用上的限制</strong><br/>
-				1. RPA在以下情况，或者经过RPA的判断有可能出现以下的情况时，可以不经过会员的同意，限制会员使用该服务。<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;a. 根据用户使用服务的状况，以及RPA得到的其他信息，可以推测该用户的账户，用户名以及密码未经允许被第三者使用的情况。<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;b. 被RPA判定违反本会员协议的情况。<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;c. 上述以外经RPA的判断认为紧急性很高的情况。<br/>
+				1. dataSpring在以下情况，或者经过dataSpring的判断有可能出现以下的情况时，可以不经过会员的同意，限制会员使用该服务。<br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;a. 根据用户使用服务的状况，以及dataSpring得到的其他信息，可以推测该用户的账户，用户名以及密码未经允许被第三者使用的情况。<br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;b. 被dataSpring判定违反本会员协议的情况。<br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;c. 上述以外经dataSpring的判断认为紧急性很高的情况。<br/>
 
-				2. RPA在采取前项的措施，造成该会员无法使用该服务，造成损失的时候，RPA不负责任。</p>
+				2. dataSpring在采取前项的措施，造成该会员无法使用该服务，造成损失的时候，dataSpring不负责任。</p>
 
 				<p><strong>第十六条 服务的暂时中断</strong><br/>
 
-				RPA在以下的情况下，可以不事先通知会员而暂时终止该服务。且RPA不为其他的原因造成服务的延迟和中断，为会员或者第三者带来的损失负责。<br/>
+				dataSpring在以下的情况下，可以不事先通知会员而暂时终止该服务。且dataSpring不为其他的原因造成服务的延迟和中断，为会员或者第三者带来的损失负责。<br/>
 				1. 定期以及临时发生的本服务系统的维护，修理，检查和更改。<br/>
 				2. 因火灾，停电等原因造成的本服务的中断。<br/>
 				3. 因地震，火山，洪水，海啸等天灾造成的本服务中断。<br/>
@@ -99,8 +99,8 @@
 				5. 其他在运营或者技术上，本公司认为有必要中断服务时。</p>
 
 				<p><strong>第十七条 服务的终止</strong><br/>
-				1. RPA在不预告用户的情况下，可以终止全部或者一部分的服务。<br/>
-				2. RPA在终止提供本服务后，将不再为本服务负责。</p>
+				1. dataSpring在不预告用户的情况下，可以终止全部或者一部分的服务。<br/>
+				2. dataSpring在终止提供本服务后，将不再为本服务负责。</p>
 
 				<p><strong class="font20">第七章 违反会员协议的处理方法</strong></p>
 
@@ -119,58 +119,58 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;10. 作出不真实的回答<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;11. 出售，出借会员的账户<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;12. 买卖积分的行为<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;13. 上述之外，经RPA的判断认为不合适的行为</p>
+				&nbsp;&nbsp;&nbsp;&nbsp;13. 上述之外，经dataSpring的判断认为不合适的行为</p>
 
 				<p><strong>第十九条 由会员发起的解约</strong><br/>
 
-				会员希望解约时，应当根据RPA所指定的方法完成相关手续。</p>
+				会员希望解约时，应当根据dataSpring所指定的方法完成相关手续。</p>
 
-				<p><strong>第二十条 由RPA发起的解约</strong><br/>
+				<p><strong>第二十条 由dataSpring发起的解约</strong><br/>
 
-				RPA在第六条所述的会员申请内容不完备，会员未履行第十一条规定的会员义务，以及违反第十八条所规定的禁止事项时，或者经过RPA的判断认为不合适的情况下，可以在不事先通知会员的情况下进行解约。</p>
+				dataSpring在第六条所述的会员申请内容不完备，会员未履行第十一条规定的会员义务，以及违反第十八条所规定的禁止事项时，或者经过dataSpring的判断认为不合适的情况下，可以在不事先通知会员的情况下进行解约。</p>
 
 				<p><strong>第二十一条 会员资格失效</strong><br/>
 				1. 根据第十九条或者第二十条的规定，会员解约后该会员的资格将失效。<br/>
-				2. 会员资格失效后，RPA将在数天内消除会员的联系地址，另外RPA的数据库中所保存的会员信息也将在一定期间之后删除。</p>
+				2. 会员资格失效后，dataSpring将在数天内消除会员的联系地址，另外dataSpring的数据库中所保存的会员信息也将在一定期间之后删除。</p>
 
 				<p><strong class="font20">第八章 损失的赔偿</strong></p>
 
 				<p><strong>第二十二条 保证的放弃</strong><br/>
 				1. 会员本人应该对包括本服务的内容在内的，在本服务的使用负责。本服务以及各种信息，将在现状或者可能的限度内被提供。<br/>
-				2. RPA以及与有关的公司，供应商，以及各个公司的董事，管理人，代理人，员工不论以何种方式，不论明示或者暗示都将放弃对本服务的保证。<br/>
+				2. dataSpring以及与有关的公司，供应商，以及各个公司的董事，管理人，代理人，员工不论以何种方式，不论明示或者暗示都将放弃对本服务的保证。<br/>
 				3. 因会员无法访问本服务的内容或者使用本服务所造成的迟延或者所有损失都由会员单独负责。</p>
 
 				<p><strong>第二十三条 免责事项</strong><br/>
 
-				RPA以及与其有关的公司、供应商，以及各个公司的董事、管理人、代理人、员工不论以何种方式，不论是否事先知道损失发生的可能性，都对间接的损失，偶发的损失，特别的损失，结果的损失或者惩罚造成的损失不负责任。</p>
+				dataSpring以及与其有关的公司、供应商，以及各个公司的董事、管理人、代理人、员工不论以何种方式，不论是否事先知道损失发生的可能性，都对间接的损失，偶发的损失，特别的损失，结果的损失或者惩罚造成的损失不负责任。</p>
 
 				<p><strong>第二十四条 会员间的情况</strong><br/>
 
-				RPA对会员之间通过本服务所发生的信息的交换，以及附带的行为不负责任。</p>
+				dataSpring对会员之间通过本服务所发生的信息的交换，以及附带的行为不负责任。</p>
 
 				<p><strong class="font20">第九章 个人信息</strong></p>
 
 				<p><strong>第二十五条 个人信息的处理</strong><br/>
-				1. RPA将根据<隐私方针>，谨慎地处理用户的个人信息。<br/>
-				2. RPA所取得的个人信息的使用目的如下<br/>
+				1. dataSpring将根据&lt;隐私方针&gt;，谨慎地处理用户的个人信息。<br/>
+				2. dataSpring所取得的个人信息的使用目的如下<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;a. 将市场的区划信息提供给客户<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;b. 以无法特定个人的形式，用于统计数据<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;c. 用于给用户发送奖品或者邮件<br/>
 				&nbsp;&nbsp;&nbsp;&nbsp;d. 为了保证调查的正确性与品质，而进行的联络<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;e. 改善RPA所提供的服务以及信息内容的品质<br/>
-				&nbsp;&nbsp;&nbsp;&nbsp;f. 在RPA新服务开始时面向会员的告知以及诱导<br/>
-				&nbsp;&nbsp;g. 其他经过会员认可的活动</p>
+				&nbsp;&nbsp;&nbsp;&nbsp;e. 改善dataSpring所提供的服务以及信息内容的品质<br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;f. 在dataSpring新服务开始时面向会员的告知以及诱导<br/>
+				&nbsp;&nbsp;&nbsp;&nbsp;g. 其他经过会员认可的活动</p>
 
 
 				<p><strong class="font20">第十章 其他</strong></p>
 
 				<p><strong>第二十六条 知识产权的归属</strong><br/>
 
-				会员在本服务的网站上所产生的信息内容时，将不会任何著作权使用费。会员应该提供给RPA且非独占的，无法取消，完全（继承）Sub <br/>lisence的权利给RPA以及其RPA的相关公司。根据该权利协议，RPA可以不需要获得会员的承认或者对用户进行补偿，既可在全世界各种媒体上使 用，复制，修正，改变，翻译，创作派生物，发送，实行，登载用户所产生的信息内容。</p>
+				会员在本服务的网站上所产生的信息内容时，将不会任何著作权使用费。会员应该提供给dataSpring且非独占的，无法取消，完全（继承）Sub lisence的权利给dataSpring以及其dataSpring的相关公司。根据该权利协议，dataSpring可以不需要获得会员的承认或者对用户进行补偿，既可在全世界各种媒体上使 用，复制，修正，改变，翻译，创作派生物，发送，实行，登载用户所产生的信息内容。</p>
 
 				<p><strong>第二十七条 链接</strong><br/>
 
-				有时，使用者将可以通过本网站的链接自由连接至由第三机构所运营/持有的网站（以下成为第三机构的网站）。RPA放弃对第三机构的网站，或者第三机 <br/>构的网站所宣传，提供，或者贩卖的产品的保证，且第三机构的网站有可能并未经过RPA的确认。不论第三机构的网站所包含的个人信息及隐私保护是如何实施以 <br/>及运营，RPA将不对第三机构的网站上所包含的信息负责。RPA将放弃对，第三机构的网站所运营以及所有的项目，以及第三机构的个人隐私，个人信息的保 护，第三机构所提供的商品以及服务的任何提示以及保证。</p>
+				有时，使用者将可以通过本网站的链接自由连接至由第三机构所运营/持有的网站（以下成为第三机构的网站）。dataSpring放弃对第三机构的网站，或者第三机构的网站所宣传，提供，或者贩卖的产品的保证，且第三机构的网站有可能并未经过dataSpring的确认。不论第三机构的网站所包含的个人信息及隐私保护是如何实施以及运营，dataSpring将不对第三机构的网站上所包含的信息负责。dataSpring将放弃对，第三机构的网站所运营以及所有的项目，以及第三机构的个人隐私，个人信息的保 护，第三机构所提供的商品以及服务的任何提示以及保证。</p>
 
 				<p><strong>第二十八条 协议的分离</strong><br/>
 
@@ -182,7 +182,7 @@
 
 				<p><strong>第三十条 同意</strong><br/>
 
-				会员在使用RPA的服务，或者成为RPA会员时，将视为同意本会员协议。</p>
+				会员在使用dataSpring的服务，或者成为dataSpring会员时，将视为同意本会员协议。</p>
 			</li>
 		</ul>
 	</div>
