--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
@@ -3,15 +3,15 @@
         <div class="footer-nav-group">
             <span>关于我们</span>
             <ul>
-                <li><a href="{{ path('_default_about') }}" title="集团介绍">集团介绍</a></li>
-                <li><a href="{{ path('_default_about_ww') }}" title="问问介绍">问问介绍</a></li>
+                <li><a href="{{ path('_default_about') }}" title="公司介绍">公司介绍</a></li>
+                <li><a href="{{ path('_default_about_ww') }}" title="网站介绍">网站介绍</a></li>
                 <li><a href="{{ path('_default_about_map') }}" title="网站地图">网站地图</a></li>
             </ul>
         </div>
         <div class="footer-nav-group">
             <span>集团网站</span>
             <ul>
-                <li><a href="http://www.researchpanelasia.com/" target="_blank" title="Research Panel Asia">Research Panel Asia</a></li>
+                <li><a href="http://www.d8aspring.com/" target="_blank" title="dataSpring, Inc.(日本) ">dataSpring</a></li>
                 <li><a href="http://research-panel.jp/" target="_blank" title="Japan Panel">Japan Panel</a></li>
                 <li><a href="http://www.panelnow.co.kr/" target="_blank" title="South Korea Panel">South Korea Panel</a></li>
             </ul>
