--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
-{% block title %}首页：{{ parent() }} {% endblock %}
+{% block title %}{{ parent() }}_资深问卷调查网，在线调查，商业调查，免费，市场调查，调查问卷{% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css/index.css') }} " rel="stylesheet" type="text/css">
@@ -13,9 +13,9 @@
 <div class="main-ad">
 	<div class="main-ad-con w1000">
 		<div class="main-ad-con-text">
-			<h1><img src="{{ asset('img/home/adTitle.png') }}" alt="动动手指就能赚钱"></h1>
-			<p class="digits"><img src="{{ asset('img/home/pointsText.png') }}" alt="91问问调查网当前已发放人民币"><span><b></b></span><span><b></b></span><span><b></b></span><span><b></b></span><span><b></b></span><span><b></b></span><span><b></b></span></p>
-			<div class="more-btn"><a href="{{ path('_default_support') }}">了解更多？</a></div>
+			<h1><img src="{{ asset('img/home/adTitle.png') }}" alt="问卷调查_动动手指就能赚钱" title="问卷调查_动动手指就能赚钱"></h1>
+			<p class="digits"><img src="{{ asset('img/home/pointsText.png') }}" alt="91问问调查网当前已发放人民币" title="91问问调查网当前已发放人民币"><span><b></b></span><span><b></b></span><span><b></b></span><span><b></b></span><span><b></b></span><span><b></b></span><span><b></b></span></p>
+			<div class="more-btn"><a href="{{ path('_default_support') }}" title="了解更多">了解更多？</a></div>
 		</div>
 		<div class="login-wrapper">
 			<div class="login">
@@ -40,9 +40,9 @@
 </div>
 <div class="main-con main-con-rewardprocess">
 	<div class="w1000">
-		<h2><img src="{{ asset('img/home/rewardProcess.png') }}" alt="积分流程"></h2>
+		<h2><img src="{{ asset('img/home/rewardProcess.png') }}" alt="做问卷积分流程" title="做问卷积分流程"></h2>
 		<div class="main-con-detail">
-			<div class="img"><img src="{{ asset('img/home/rewardProcessImg.png') }}" alt=""></div>
+			<div class="img"><img src="{{ asset('img/home/rewardProcessImg.png') }}" alt="做问卷积分流程示意图" title="做问卷积分流程示意图"></div>
 			<div class="text">
 				<ul class="clearfix">
 					<li class="step1">
@@ -64,7 +64,7 @@
 </div>
 <div class="main-con main-con-wall">
 	<div class="w1000">
-		<h2><img src="{{ asset('img/home/wall.png') }}" alt="91问问标签墙"></h2>
+		<h2><img src="{{ asset('img/home/wall.png') }}" alt="91问问标签墙" title="91问问标签墙"></h2>
 		<div class="main-con-detail">
 			<div id="parkParty" class="party" data-timeout="500">
        			<em class="party-item party01 js-item"></em>
