removed emar detail

--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
@@ -12,7 +12,7 @@
                 <div class="shopActive">
                     <div class="shopMask"></div>
                     <div class="shopBtns">
-                        <a class="toMore" href="{{  path('jili_emar_websites_detail', {'wid': row.webId }) }}" title="返利详情">返利详情</a>
+                        <a class="toMore" href="#" title="返利详情">返利详情</a> 
                         <a class="toBuy" href="{{ path('jili_emar_default_redirect') ~ '?m=' ~ row.webUrl|url_encode  }}" target="_blank" title="直接购物">直接购物</a>
                     </div>
                 </div>
