--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
@@ -3,19 +3,7 @@
         <ul class="clearfix">
             {% for row in websites %}
             <li>
-                <div class="shopLogo"><img src="{{ row.logoUrl }}" width="76" height="40" alt="{{ row.webName }}"/></div>
-                {% if row.commission > 0 %}
-                <p>最高返{{ row.commission }}%</p>
-                {% else %}
-                <p>视情况而定</p>
-                {% endif %}
-                <div class="shopActive">
-                    <div class="shopMask"></div>
-                    <div class="shopBtns">
-                        <a class="toMore" href="#" title="返利详情">返利详情</a> 
-                        <a class="toBuy" href="{{ path('jili_emar_default_redirect') ~ '?m=' ~ row.webUrl|url_encode  }}" target="_blank" title="直接购物">直接购物</a>
-                    </div>
-                </div>
+                <div class="shopLogo"><a class="toBuy" href="{{ path('jili_emar_default_redirect') ~ '?m=' ~ row.webUrl|url_encode  }}" target="_blank" title="直接购物"><img src="{{ row.logoUrl }}" width="76" height="40" alt="{{ row.webName }}"/></a></div>
             </li>
             {% endfor %}
         </ul>
@@ -23,14 +11,3 @@
     <bdo class="prevBtn"></bdo>
     <bdo class="nextBtn"></bdo>
 </div>
- <script type="text/javascript">
-	$(function(){
-            $('.shopSlider li').hover(function(){
-                var index = $('.shopSlider li').index(this);
-                $('.shopActive').eq(index).stop(true,true).delay(400).slideDown(20);
-            },function(){
-				var index = $('.shopSlider li').index(this);
-                $('.shopActive').eq(index).stop(true,true).slideUp(20);
-            });
-	});
-</script>
