--- a/src/Jili/FrontendBundle/Resources/views/Vote/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Vote/index.html.twig
@@ -35,8 +35,8 @@
                                 <span>截止日期：{{ item.endTime|date("Y-m-d") }}</span>
                             </div>
                         </span>
-                        {% if (item.startTime|date("Ymd") == "now"|date('Ymd')) %}
-                        <div><input type="hidden" name="timelimit_ut" value="1440777600" /><div id="countdown" class="countdown"></div></div>
+                        {% if item.timelimit is defined %}
+                        <div><input type="hidden" name="timelimit_ut" value="{{item.timelimit}}" /><div id="countdown" class="countdown"></div></div>
                         <div class="tips expand-btn">
                             <span>?</span>
                             <div class="tips-con expand-con"><p>倒计时内回答此份快速回答，将额外获得1积分。</p><b class="arrow"></b></div>
@@ -52,10 +52,10 @@
                 {% endfor %}
             {% endif %}
             </ul>
-           
+
             {% if pagination is defined %}{{ knp_pagination_render(pagination) }}{%endif %}
-        
-            <!--  
+
+            <!--
             <div class="page-wrapper">
                 <p class="page">
                     <span class="active">1</span>
