--- a/src/Jili/FrontendBundle/Resources/views/Vote/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Vote/index.html.twig
@@ -42,10 +42,14 @@
                             <div class="tips-con expand-con"><p>倒计时内回答此份快速回答，将额外获得1积分。</p><b class="arrow"></b></div>
                         </div>
                         {% else %}
-                            {% if item.userAnswerCount == 0 %}
-                            <div class="survey-btn"><a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}">去投票</a></div>
+                            {% if (item.endTime|date("Ymd") < "now"|date('Ymd')) %}
+                                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
                             {% else %}
-                            <div class="survey-btn"><a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}" class="disabled">已投票</a></div>
+                                {% if app.session.has('uid') and item.userAnswerCount > 0 %}
+                                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
+                                {% else %}
+                                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}">立即投票</a></div>
+                                {% endif %}
                             {% endif %}
                         {% endif %}
                     </li>
