--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -152,9 +152,38 @@ $(document).ready(function(){
             <div class="headerConUp clearfix">
                 <a href="{{ path('_homepage') }}" title="91积粒logo" class="logo fnLeft"><img src="{{ asset('images/logo.png') }}" width="160" height="46" alt="91积粒logo" title="91积粒logo"/></a>
                 {% if app.request.attributes.get('_route') == '_homepage' %}
-                    {% block search_box %}
-                    	{{ render(controller('JiliEmarBundle:Search:form', {'rt' : 1 } )) }}{# 商城检索 #}
-                    {% endblock %}
+                     <form action="#"  id="search_box">
+                     
+                         <div class="search fnRight">
+                             <div class="tbSearch"><a data-type="6" data-tmpl="573x66" data-tmplid="140" data-style="2" data-border="0" biz-s_logo="1" biz-s_hot="1" href="#"></a>
+                                 <div class="tbTipsWrap">
+                                     <a class="tbTipsIco"></a>
+                                     <div class="tbTipsCon">
+                                         <em></em>通过这里去爱淘宝购物，即可参加<a style="text-decoration:underline;" href="{{ path('jili_api_monthactivity_gatheringindex',{'l':7}) }}" target="_blank">抱团大作战</a>活动，最高可瓜分<a>2,888,888</a>米粒
+                                     </div>
+                                 </div>
+                             </div>
+                             <a href="{{ path('_default_support') }}" class="hpIco" title="帮助中心"></a>
+                         </div>
+                         {% include "JiliFrontendBundle::alimama.html.twig" with { pid:"mm_49376465_4372428_28778243" } %}
+                     </form> 
+                     <script type="text/javascript">
+                     var search_form_rt_config = search_form_rt_config || {};
+                     search_form_rt_config = {{ rt_of_search_form|json_encode|raw   }};
+                     var search = function() {
+                          $('#search_box').submit();
+                          return false;
+                     };
+                     //taobaoTips
+                     var tbTipsCon = $(".tbTipsCon");
+                     $(".tbTipsWrap").hover(function(){
+                             tbTipsCon.show();
+                         }, function(){
+                             tbTipsCon.hide();
+                     });
+                     </script>
+
+                        {# toabao检索 #}
 				{% endif %}
             </div>
             <ul class="mainNavs clearfix">
